# card-miner

./: .gitignore  Dockerfile  Makefile  README.md  anki_api.py  docker-compose.yml  filter.py  get_anki_card.py  pyproject.toml  requirements.txt  scraper.py  script.py
